<resources>
    <string name="app_name">LAPAK</string>
    <string name="welcome">Welcome!</string>
    <string name="where_are_you_going_today">Where are you going today?</string>
    <string name="hi_user">Hi, </string>
    <string name="beautiful_day">It\'s a beautiful day, isn\'t it?</string>
    <string name="amount_balance">Rp. 300.000,00</string>
    <string name="water_payment">Water Payment</string>
    <string name="electric_payment">Electric Payment</string>
    <string name="top_up_your_balance">Top Up your Balance</string>
    <string name="bike_rental">Bike Rental\n</string>
    <string name="citra_niaga_parking">Citra Niaga Parking</string>
    <string name="parking_payment">My QR Payment</string>
    <string name="top_up_my_wallet">Top up my Wallet</string>
    <string name="my_profile">My Profile</string>
    <string name="my_vehicle">My Vehicle</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="feature_not_available">Sorry, this feature is not available yet</string>
    <string name="jalan_dan_parkir">Jalan dan Parkir</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="back_to_login">Back to Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_exist">User already exist.</string>
    <string name="vehicle_already_exist">This vehicle already exist.</string>
    <string name="error_name">Please enter a valid username!</string>
    <string name="error_email">Please enter a  valid Email!</string>
    <string name="error_length_name">Your Name is to short!</string>
    <string name="error_password_length">Password can\'t be blank or too short</string>
    <string name="error_no_police">Please enter a valid police number</string>
    <string name="login_success">Success!</string>
    <string name="login_failed">Failed to Login. Please check your data.</string>
    <string name="scan_this_qr_code_to_make_payment">Scan this QR code to make a payment</string>
    <string name="area_parking_name">Area Parking Name</string>
    <string name="add">ADD</string>
    <string name="car">Car</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="complete_your_vehicle_s_data">Complete your vehicle\'s data</string>
    <string name="police_number">Police Number</string>
    <string name="done">Done</string>
    <string name="vehicle_added">Your vehicle have been added</string>
    <string name="no_vehicle_found">No Vehicle Found.</string>
    <string name="check_out">Check Out</string>
</resources>
