<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <LinearLayout
        android:id="@+id/text_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="6dp"
        android:gravity="center"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/tiny_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!--Kalo mau tambah logo -->
        <!--<ImageView-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="70dp"-->
        <!--android:src="@drawable/logo"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="26sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/where_are_you_going_today"
            android:textSize="12sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:elevation="6dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_hello_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/hi_user"
            android:textColor="@android:color/white"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beautiful_day"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="@dimen/tiny_margin"
        android:background="@drawable/rectangle_border"
        android:elevation="6dp"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/tiny_margin">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/tiny_margin"
                android:src="@drawable/icon_wallet" />

            <TextView
                android:id="@+id/txt_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/amount_balance"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/default_margin"
            android:background="@color/colorAccent" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/base_horizontal_scroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout_my_mitra_profile"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="@dimen/tiny_margin"
                        android:src="@drawable/icon_user" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/my_profile"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_check_in"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="@dimen/tiny_margin"
                        android:src="@drawable/icon_qr_in" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/my_vehicle"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_check_out"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="@dimen/tiny_margin"
                        android:src="@drawable/icon_qr_out" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/check_out"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_history_parking"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="@dimen/tiny_margin"
                        android:src="@drawable/icon_receipt" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/history"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_settings_mitra"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="@dimen/tiny_margin"
                        android:src="@drawable/icon_gear" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/settings"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>


    <ImageView
        android:id="@+id/bg_splash"
        android:layout_width="526dp"
        android:layout_height="900dp"
        android:scaleType="fitXY"
        android:src="@drawable/backgroundapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>