<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <LinearLayout
        android:id="@+id/text_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="6dp"
        android:gravity="center"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/tiny_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!--Kalo mau tambah logo -->
        <!--<ImageView-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="70dp"-->
        <!--android:src="@drawable/logo"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="26sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/where_are_you_going_today"
            android:textSize="12sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:elevation="6dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_hello_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/hi_user"
            android:textColor="@android:color/white"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beautiful_day"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginTop="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/tiny_margin"
        android:layout_marginBottom="@dimen/tiny_margin"
        android:padding="@dimen/default_margin"
        android:background="@drawable/rectangle_border"
        android:orientation="vertical"
        android:elevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_search_parking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:padding="@dimen/tiny_margin"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_wallet"
                android:layout_marginEnd="@dimen/tiny_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_balance"
                android:textColor="@android:color/black"/>

            <ImageView
                android:id="@+id/top_up_wallet"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_plus"
                android:paddingBottom="9dp"
                android:paddingEnd="12dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:layout_marginBottom="@dimen/default_margin"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout_my_profile"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/icon_user"
                        android:layout_marginBottom="@dimen/tiny_margin"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/my_profile"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_my_vehicle"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/icon_vehicle"
                        android:layout_marginBottom="@dimen/tiny_margin"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/my_vehicle"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_history"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/icon_receipt"
                        android:layout_marginBottom="@dimen/tiny_margin"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/history"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_settings"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/icon_gear"
                        android:layout_marginBottom="@dimen/tiny_margin"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/settings"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"/>

                </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_parking_payment"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="@dimen/tiny_margin"
        android:background="@drawable/rectangle_border"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/tiny_margin"
            android:src="@drawable/icon_qr" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/parking_payment"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_search_parking"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/tiny_margin"
        android:background="@drawable/rectangle_border"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/layout_parking_payment"
        app:layout_constraintEnd_toStartOf="@+id/layout_bike_rental"
        app:layout_constraintStart_toEndOf="@+id/layout_parking_payment"
        app:layout_constraintTop_toTopOf="@+id/layout_parking_payment"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/tiny_margin"
            android:src="@drawable/icon_parking" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/citra_niaga_parking"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bike_rental"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rectangle_border"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/layout_search_parking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layout_search_parking"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/tiny_margin"
            android:src="@drawable/icon_bicycle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bike_rental"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <!--row lagi-->

    <LinearLayout
        android:id="@+id/layout_purchase_credit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/rectangle_border"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_parking_payment"
        app:layout_constraintVertical_bias="0.366">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/tiny_margin"
            android:src="@drawable/icon_call" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/top_up_your_balance"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_electric_refill"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/tiny_margin"
        android:background="@drawable/rectangle_border"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/layout_purchase_credit"
        app:layout_constraintEnd_toStartOf="@+id/layout_water_payment"
        app:layout_constraintStart_toEndOf="@+id/layout_purchase_credit"
        app:layout_constraintTop_toTopOf="@+id/layout_purchase_credit"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/tiny_margin"
            android:src="@drawable/icon_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/electric_payment"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_water_payment"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rectangle_border"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/layout_electric_refill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layout_electric_refill"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/tiny_margin"
            android:src="@drawable/icon_water" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/water_payment"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/bg_splash"
        android:layout_width="526dp"
        android:layout_height="900dp"
        android:scaleType="fitXY"
        android:src="@drawable/backgroundapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>